Tested the routes
