# Routes/UserRoute.js
@@ -19,5 +19,6 @@ Userrouter.delete('/delete/:id',auth.superAdminJWT, authController.deleteUser);
 Userrouter.put('/profile/:id', auth.AuthJWT,authController.updateUser);
 Userrouter.put('/password', auth.AuthJWT,authController.UpdatePassword);
 Userrouter.post('/resetpassword/:token', authController.ResetPassword);
+Userrouter.get('/getOne/:id', authController.getUserById);
 
 module.exports = Userrouter;
