# swagger.json
@@ -161,6 +161,35 @@
                   }
                 }
               },
+               "/user/getOne/{id}": {
+                "get": {
+                  "tags": ["User"],
+                  "summary": "Get user by ID",
+                  "security":[
+                    {
+                  "Bearer":[]
+                     }
+          ],
+                  "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "required": true,
+                      "schema": {
+                        "type": "string"
+                      }
+                    }
+                  ],
+                  "responses": {
+                    "200": {
+                      "description": "User data"
+                    },
+                    "404": {
+                      "description": "User not found"
+                    }
+                  }
+                }
+              },
               "/user/all": {
                 "get": {
                   "tags": ["User"],
